--- a/Bounce/en.lproj/MainStoryboard.storyboard
+++ b/Bounce/en.lproj/MainStoryboard.storyboard
@@ -27,10 +27,18 @@
                                     <action selector="onStartButton:" destination="2" eventType="touchUpInside" id="AWA-Ar-GBJ"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="gI3-lQ-ydx">
+                                <rect key="frame" x="28" y="31" width="180" height="23"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="onSliderChanged:" destination="2" eventType="valueChanged" id="uJd-JI-Ykz"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="slider" destination="gI3-lQ-ydx" id="kNd-2i-YB6"/>
                         <outlet property="startButton" destination="IJW-vn-vas" id="oG4-59-FzU"/>
                     </connections>
                 </viewController>
@@ -48,6 +56,7 @@
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="onSliderChanged:" candidateClass="UISlider"/>
                 <relationship kind="action" name="onStartButton:"/>
             </relationships>
         </class>
